# siglot

./: CMakeLists.txt  EConnection.cpp  EConnection.h  ELookup.cpp  ELookup.h  EObject.cpp  EObject.h  EObserver.h  EThread.cpp  EThread.h  consumer_producer.cpp  graph.cpp  main.cpp  readme.md
example/: consumer_producer.cpp  consumer_producer_copy.cpp  consumer_producer_move.cpp  copied_emission.cpp  moved_emission.cpp  server_client.cpp  service.cpp  test.cpp
siglot/: Connection.cpp  Connection.h  Lookup.cpp  Lookup.h  Object.cpp  Object.h  Observer.h  Thread.cpp  Thread.h  connection.cpp  connection.h  lookup.cpp  lookup.h  object.cpp  object.h  observer.h  thread.cpp  thread.h  timer.h  util.h
src/: ELookup.h  EObject.cpp  EObject.h  EObserver.cpp  EThread.cpp  EThread.h
